# mandelbrot

./: Cargo.toml  README.md  meson.build
src/widget/: imp.rs
subprojects/: async-channel-2-rs.wrap  event-listener-5-rs.wrap  gtk4-0.9-rs.wrap
subprojects/packagefiles/: async-channel-2.2.0.patch  event-listener-5.3.1.patch
